<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".FilterFragment">

    <!-- TODO: Update blank fragment layout -->

    <RadioGroup
        android:id="@+id/sort_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sort_group_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_tasks_by"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/priority_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/priority_lowest_to_highest" />

        <RadioButton
            android:id="@+id/deadline_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deadline" />

        <RadioButton
            android:id="@+id/title_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />

    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_show_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/show_completed_tasks" />

    <Button
        android:id="@+id/deleteCompleted_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/delete_completed_tasks" />

</LinearLayout>