<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Widget.MaterialComponents.ActionBar.Primary" />

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/to_done"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        android:textColor="?attr/colorPrimary"
        android:textSize="48sp" />

    <EditText
        android:id="@+id/editText_EmailAddress"
        style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/email"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="?android:attr/textColorHint"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editText_Password"
        style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="?android:attr/textColorHint"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <Button
        android:id="@+id/forgotPass_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="?android:attr/textColorLink"
        android:textSize="16sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:gravity="bottom|center_horizontal">

        <TextView
            android:id="@+id/signUp_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signupprompt" />

        <Button
            android:id="@+id/signUp_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="?android:attr/textColorLink"
            android:textSize="16sp" />
    </TableRow>

</LinearLayout>