<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".EditTaskFragment"
    tools:menu="@menu/fragment_edit_task">

    <Space
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <TextView
        android:id="@+id/task_title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:text="Task Title" />

    <EditText
        android:id="@+id/editText_Task_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/your_task"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/task_date_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deadline"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/pickDate_btn"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deadline"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/task_description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textAlignment="viewStart" />

    <EditText
        android:id="@+id/editText_Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:gravity="start|top"
        android:hint="@string/your_task_description_here"
        android:inputType="textMultiLine"
        android:maxLength="180"
        android:maxLines="5"
        android:minHeight="48dp"
        android:scrollIndicators="right"
        tools:ignore="TextContrastCheck" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/task_description_label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_level"
            android:textAlignment="viewStart" />

        <Space
            android:layout_width="63dp"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/priority_spinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:entries="@array/priorities"
            android:spinnerMode="dialog" />

    </TableRow>

    <Button
        android:id="@+id/updateTask_btn"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_task" />

</LinearLayout>